examples/kju/negative/comments/unnested.kju
/*
	Here we have some nested comments
	/*
		And some more text
*/
fun kju():Unit{
}